--- a/public/birthday-page.html
+++ b/public/birthday-page.html
@@ -8,7 +8,7 @@
 	<!-- meta tags -->
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width initial-scale=1.0">
 	<meta property="og:image" content="favicon.ico" />
 
 	<!-- stylesheets -->
@@ -100,7 +100,7 @@
 
 		<div class="message row-start-3">
 			<div class="">
-				<p>Today is...</p>
+				<!-- <p>Today is...</p>
 				<p>as beautiful as other days</p>
 				<p>but you realize</p>
 				<p>another year has gone</p>
@@ -148,7 +148,7 @@
 				<p>with...</p>
 				<p>positivity and hope.❤</p>
 				<p>lastly...</p>
-				<p>I'd like to wish you one more time...</p>
+				<p>I'd like to wish you one more time...</p> -->
 				<p>Happy birthday Sofiyyah</p>
 				<p>I love you so much</p>
 			</div>
