--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,14 @@
 
     <!-- meta tags -->
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=1, minimum-scale=0.1, maximum-scale=1.0">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black">
+	<meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE" />
     <meta property="og:image" content="favicon.ico" />
 
     <!-- stylesheets -->
     <link rel="stylesheet" href="./css/tailwind.css">
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"> -->
     <!-- <link rel="stylesheet" type="text/css" href="./css/stylesheet.css"> -->
     <!-- <link rel="stylesheet" type="text/css" href="./css/loading.css"> -->
 </head>
