--- a/public/birthday-page.html
+++ b/public/birthday-page.html
@@ -8,7 +8,7 @@
 	<!-- meta tags -->
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width initial-scale=1.0">
+	<meta name="viewport" content="width=device-width initial-scale=1.0, user-scalable=1, maximum-scale=0.9">
 	<meta property="og:image" content="favicon.ico" />
 
 	<!-- stylesheets -->
@@ -57,7 +57,7 @@
 
 	<img src="./images/Balloon-Border.png" width="100%" class="balloon-border">
 
-	<div class="container grid grid-rows-layout h-screen">
+	<div class="container grid grid-rows-layout h-ascreen">
 
 		<div class="flex justify-between">
 			<div class="bulb-holder">
