--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <!-- <link rel="stylesheet" type="text/css" href="./css/loading.css"> -->
 </head>
 
-<body class="flex flex-col justify-center items-center bg-gray-900 p-6 h-screen">
+<body class="flex flex-col justify-center items-center bg-gray-900 p-6 h-ascreen">
     <div class="w-full text-center">
         <form id="contact-form"
             class="border-4 border-accent rounded-full p-1 flex items-center justify-between max-w-md mx-auto">
