--- a/public/birthday-page.html
+++ b/public/birthday-page.html
@@ -7,9 +7,12 @@
 
 	<!-- meta tags -->
 	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width initial-scale=1.0, user-scalable=1, maximum-scale=0.9">
-	<meta property="og:image" content="favicon.ico" />
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black">
+	<meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE" />
+	<meta name="viewport" content="width=device-width initial-scale=1.0, user-scalable=1, maximum-scale=0.9 minimum-scale=1.0
+	<meta property="og:image" content="../favicon.ico" />
+
 
 	<!-- stylesheets -->
 	<link rel="stylesheet" href="./css/tailwind.css">
