--- a/public/birthday-page.html
+++ b/public/birthday-page.html
@@ -10,7 +10,8 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE" />
-	<meta name="viewport" content="width=device-width initial-scale=1.0, user-scalable=1, maximum-scale=0.9 minimum-scale=0.7
+	<meta name="viewport"
+		content="width=device-width initial-scale=1.0, user-scalable=1, maximum-scale=0.9 minimum-scale=0.7" />
 	<meta property="og:image" content="../favicon.ico" />
 
 
