--- a/public/birthday-page.html
+++ b/public/birthday-page.html
@@ -12,8 +12,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE" />
 	<meta name="viewport"
 		content="width=device-width initial-scale=1.0, user-scalable=1, maximum-scale=0.9 minimum-scale=0.7" />
-	<meta property="og:image" content="../favicon.ico" />
-
+	<link rel="icon" href="../favicon.ico">
 
 	<!-- stylesheets -->
 	<link rel="stylesheet" href="./css/tailwind.css">
