--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE" />
-    <meta property="og:image" content="favicon.ico" />
+    <link rel="icon" href="../favicon.ico">
 
     <!-- stylesheets -->
     <link rel="stylesheet" href="./css/tailwind.css">
