--- a/public/birthday-page.html
+++ b/public/birthday-page.html
@@ -60,7 +60,7 @@
 
 	<img src="./images/Balloon-Border.png" width="100%" class="balloon-border">
 
-	<div class="container grid grid-rows-layout h-ascreen">
+	<div class="container grid grid-rows-layout h-ascreen py-4">
 
 		<div class="flex justify-between">
 			<div class="bulb-holder">
@@ -103,7 +103,7 @@
 
 		<div class="message row-start-3">
 			<div class="">
-				<!-- <p>Today is...</p>
+				<p>Today is...</p>
 				<p>as beautiful as other days</p>
 				<p>but you realize</p>
 				<p>another year has gone</p>
@@ -151,7 +151,7 @@
 				<p>with...</p>
 				<p>positivity and hope.❤</p>
 				<p>lastly...</p>
-				<p>I'd like to wish you one more time...</p> -->
+				<p>I'd like to wish you one more time...</p>
 				<p>Happy birthday Sofiyyah</p>
 				<p>I love you so much</p>
 			</div>
