--- a/public/birthday-page.html
+++ b/public/birthday-page.html
@@ -109,7 +109,7 @@
 				<p>another year has gone</p>
 				<p>in a blink of the eyes</p>
 				<p><strong>however</strong></p>
-				<p>Do you know?</p>
+				<p>Do you know...?</p>
 				<p>today is just special,</p>
 				<p>so special to you.</p>
 				<p>Let's make it...</p>
