--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
                 <p class="text-gray-500 text-md p-2 mb-6">For privacy, Yinka wants to make sure it's his <span class="text-accent">Boss Baby</span></p>
             </span>
         </div>
-        <div class="px-3">
+        <div class="">
             <form id="contact-form"
                 class="border-4 border-accent rounded-full p-1 flex items-center justify-between max-w-md mx-auto">
                 <input type="password" id="pin" maxlength="10" required placeholder="ENTER PIN"
