--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,8 @@
     <div class="w-full text-center">
         <div>
             <span>
-                <h1 class="font-body font-bold text-5xl text-white">Verify it's you.</h1>
-                <p class="text-gray-500 text-md p-2 mb-6">For privacy, Yinka wants to make sure it's his <span class="text-accent">Boss Baby</span></p>
+                <h1 class="font-body font-bold text-4xl md:text-4xl mb-2 text-white">1-Step Verification.</h1>
+                <p class="text-gray-500 text-md px-4 mb-6">For privacy, Yinka wants to make sure it's his <span class="text-accent">Boss Baby</span></p>
             </span>
         </div>
         <div class="">
