--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="tailwind.css">
-  <title>coming soon</title>
+  <title>Coming soon</title>
 </head>
 
 <body class="p-1 text-center h-screen md:text-xl bg-red-500 text-white font-body flex flex-col justify-center items-center">
