--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.1, maximum-scale=1.0">
   <link rel="stylesheet" href="tailwind.css">
   <title>Coming soon</title>
 </head>
 
-<body class="p-1 text-center h-screen md:text-xl bg-red-500 text-white font-body flex flex-col justify-center items-center">
+<body class="p-1 text-center h-ascreen md:text-xl bg-red-500 text-white font-body flex flex-col justify-center items-center">
 
   <div class="mx-auto p-5">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 202.24 202.24" class="w-24 mx-auto mt-4">
