--- a/public/index.html
+++ b/public/index.html
@@ -23,15 +23,15 @@
     <div class="w-full text-center">
         <div>
             <span>
-                <h1 class="font-body font-bold text-4xl md:text-4xl mb-2 text-white">1-Step Verification.</h1>
-                <p class="text-gray-400 text-md px-4 mb-6">For privacy, Yinka wants to make sure it's his <span class="text-accent">Boss Baby</span></p>
+                <h1 class="font-body font-bold text-4xl md:text-5xl mb-2 text-white">1-Step Verification.</h1>
+                <p class="text-gray-400 text-md md:text-xl px-4 mb-5">For privacy, Yinka wants to make sure it's his <span class="text-accent">Boss Baby</span></p>
             </span>
         </div>
         <div class="px-4">
             <form id="contact-form"
-                class="border-4 border-accent rounded-full p-1 flex items-center justify-between max-w-md mx-auto">
+                class="border-4 border-accent rounded-full p-1 flex items-center justify-between max-w-xs mx-auto">
                 <input type="password" id="pin" maxlength="10" required placeholder="ENTER PIN"
-                    class="px-2 mx-4 w-full bg-transparent text-2xl text-white border-transparent rounded-none caret-accent placeholder:text-gray-300 placeholder:text-xl focus:placeholder:text-muted focus:outline-none ">
+                    class="px-2 mx-4 w-full bg-transparent text-xl text-white border-transparent rounded-none caret-accent placeholder:text-gray-300 placeholder:text-xs focus:placeholder:text-muted focus:outline-none ">
                 <button
                     class="bg-accent text-bkg font-medium text-sm py-3 px-4 sm:px-8 rounded-full border border-bkg focus:outline-none focus-visible:ring-4 ring-accent ring-offset-bkg ring-offset-2 hover:bg-accent/90 flex space-x-2 shrink-0"
                     id="contact-btn">
