--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
             <form id="contact-form"
                 class="border-4 border-accent rounded-full p-1 flex items-center justify-between max-w-xs mx-auto">
                 <input type="password" id="pin" maxlength="10" required placeholder="ENTER PIN"
-                    class="px-2 mx-4 w-full bg-transparent text-xl text-white border-transparent rounded-none caret-accent placeholder:text-gray-300 placeholder:text-sm focus:placeholder:text-muted focus:outline-none ">
+                    class="px-2 mx-4 w-full bg-transparent text-xl text-white border-transparent rounded-none caret-accent placeholder:text-gray-300 placeholder:text-md focus:placeholder:text-muted focus:outline-none ">
                 <button
                     class="bg-accent text-bkg font-medium text-sm py-3 px-4 sm:px-8 rounded-full border border-bkg focus:outline-none focus-visible:ring-4 ring-accent ring-offset-bkg ring-offset-2 hover:bg-accent/90 flex space-x-2 shrink-0"
                     id="contact-btn">
