--- a/public/birthday-page.html
+++ b/public/birthday-page.html
@@ -103,7 +103,7 @@
 
 		<div class="message row-start-3">
 			<div class="">
-				<!-- <p>Today is...</p>
+				<p>Today is...</p>
 				<p>as beautiful as other days</p>
 				<p>but you realize</p>
 				<p>another year has gone</p>
@@ -151,7 +151,7 @@
 				<p>with...</p>
 				<p>positivity and hope.❤</p>
 				<p>lastly...</p>
-				<p>I'd like to wish you one more time...</p> -->
+				<p>I'd like to wish you one more time...</p>
 				<p>Happy birthday Sofiyyah</p>
 				<p>I love you so much</p>
 			</div>
