--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
   <div class="px-3 md:w-2/3 md:mx-auto flex flex-wrap justify-center items-center">
     <p>Sorry for the inconvenience. We&rsquo;re performing some maintenance at the moment. You can
       always contact <a href="http://wa.link/9fl60y/"
-        class="text-red-200 font-semibold hover:text-white border-b-2 border-b-red-200 hover:border-b-white">Yinka</a>
+        class="text-white font-semibold hover:text-red-200 border-b-2 border-b-white hover:border-b-red-200">Yinka</a>
       for updates, otherwise we&rsquo;ll be back up
       shortly!</p>
     <p class="p-1 mt-1">&mdash;<span class="font-medium text-red-200"> YinkaJS</span></p>
