--- a/public/birthday-page.html
+++ b/public/birthday-page.html
@@ -138,13 +138,13 @@
 				<p>because...</p>
 				<p>Allah has your back</p>
 				<p>and</p>
-				<p>this year will be better</p>
-				<p>and I hope</p>
+				<p>this year will be better.</p>
+				<p>I hope</p>
 				<p>you'll find...</p>
 				<p>happiness along the way.🙏</p>
-				<p>keep your spirit up</p>
+				<p>keep your spirit up.</p>
 				<p>enjoy every single moment...</p>
-				<p>that you experience today</p>
+				<p>that you experience today.</p>
 				<p>fill it with your most beautiful smile</p>
 				<p>and make it the best memory.</p>
 				<p>Always look forward to the future</p>
@@ -153,7 +153,7 @@
 				<p>lastly...</p>
 				<p>I'd like to wish you one more time...</p>
 				<p>Happy birthday Sofiyyah</p>
-				<p>I love you so much</p>
+				<p>I love you so much ❤</p>
 			</div>
 		</div>
 
@@ -166,7 +166,7 @@
 			<button class="btn btn-primary" id="light_candle"> Light Candle</button>
 			<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
 			<button class="btn btn-primary" id="story">A mesage for you</button>
-			<button class="btn btn-primary" id="cake_cut">Come, so we cut the Cake together 😋😎</button>
+			<!-- <button class="btn btn-primary" id="cake_cut">Come, so we cut the Cake together 😋😎</button> -->
 		</div>
 
 	</div>
